#318 refinements
